# 80C31-Timer

./: .gitignore  CMakeLists.txt  README.md  main.c
cmake/: toolchain.cmake
converter/: conv.c
encoder/: CMakeLists.txt  encoder.c  encoder.h
gui/: CMakeLists.txt  gui.c
hd44780/: CMakeLists.txt  hd44780.c  hd44780.h
relay/: CMakeLists.txt  relay.c  relay.h
system/: system.c  system.h
